# khameleon-core

./: .gitignore  Cargo.toml  Makefile  README.md  install_libs.sh
client/: Makefile  README.md  package.json  rollup.config.js  tsconfig.json
client/apps/: index.ts
client/apps/gallery/: index.ts
client/apps/game/: index.ts
client/apps/gameapp/: index.ts
client/apps/testapp/: index.ts
client/gallery/: index.html  index.ts
client/game/: index.html  index.ts
client/gameapp/: index.html  index.ts
client/khameleon-core/: index.ts
client/khameleon-core/apps/: app.ts
client/khameleon-core/cache/: LRUcache.ts  cache.ts  cachefactory.ts  index.ts  ringIndex.ts
client/khameleon-core/distribution/: dist.ts  gaussian-dist.ts  index.ts
client/khameleon-core/engine/: engine.ts  reqmanager.ts
client/khameleon-core/logger/: logger.ts
client/khameleon-core/predictor/: index.ts  kalman-filter.ts  markov.ts  predictor.ts
client/khameleon-core/utils/: index.ts  syslogger.ts  utils.ts  ws.ts
client/testapp/: index.html  index.ts
scripts/gallery_scripts/: create_gallery.py  create_tile.py
src/: README.md  ds.rs  main.rs
src/apps/: mod.rs
src/apps/gallery/: gallery.rs  layout.rs  mod.rs
src/apps/game/: game.rs  gm.rs  mod.rs  spingame.rs
src/apps/testapp/: mod.rs  testapp.rs
src/backend/: inmem.rs
src/manager/: manager.rs  mod.rs  scheduling.rs  sender.rs
src/scheduler/: decoders.rs  greedy.rs  ilp.rs  mod.rs  prob.rs  topk.rs
src/webserver/: appconfig.rs  mod.rs  ws.rs
